# ml

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/ml/: all.h  closed_unit_interval.h  cnl_support.h  constants.h  fixed_point.h  forward_decl.h  functions.h  functions_vec4.h  geometry.h  mat4x4.h  matrices.h  swizzle.inl  swizzle_impl.h  tvec2.h  vec2.h  vec2_fix.h  vec3.h  vec4.h
include/ml/simd/: mat4x4.h  vec4.h
include/ml/x86/: mat4x4.h  vec4.h
scripts/: clean-deps.sh  pre-build.sh
test/: CMakeLists.txt  closed_interval.cpp  cnl_support.cpp  math.cpp
